--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
   "name": "isu-form-sections",
   "version": "0.0.1",
-  "description": "Adds form sections functionality to AngularJS.",
-  "main": "dist/knockout-paging.js",
+  "description": "Adds form sections functionality to AngularJS with verge API.",
+  "main": "dist/isu-form-sections.js",
   "files": [
     "LICENSE",
     "README.md",
     "dist"
   ],
-  "repository": { 
-    "type": "git", 
-    "url": "git@github.com/jalafel/isu-form-sections.git" 
+  "repository": {
+    "type": "git",
+    "url": "git@github.com/jalafel/isu-form-sections.git"
   },
-  "keywords": [ "angular"],
+  "keywords": [
+    "angular"
+  ],
   "author": "Jessica Tran",
-  "bugs": { 
-    "url": "https://github.com/jalafel/isu-form-sections/issues" 
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jalafel/isu-form-sections/issues"
   },
-  "homepage": "https://github.com/jalafel/isu-form-sections"
+  "homepage": "https://github.com/jalafel/isu-form-sections",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-if": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "karma": "^0.13.22"
+  }
 }
